--- a/Project1 Music database/test.ipynb
+++ b/Project1 Music database/test.ipynb
@@ -164,20 +164,6 @@
        "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>73</td>\n",
-       "        <td>Jacob</td>\n",
-       "        <td>Klein</td>\n",
-       "        <td>M</td>\n",
-       "        <td>paid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>24</td>\n",
-       "        <td>Layla</td>\n",
-       "        <td>Griffin</td>\n",
-       "        <td>F</td>\n",
-       "        <td>paid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>50</td>\n",
        "        <td>Ava</td>\n",
        "        <td>Robinson</td>\n",
@@ -185,10 +171,24 @@
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>54</td>\n",
-       "        <td>Kaleb</td>\n",
-       "        <td>Cook</td>\n",
+       "        <td>14</td>\n",
+       "        <td>Theodore</td>\n",
+       "        <td>Harris</td>\n",
        "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>Sylvie</td>\n",
+       "        <td>Cruz</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>98</td>\n",
+       "        <td>Jordyn</td>\n",
+       "        <td>Powell</td>\n",
+       "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -201,10 +201,10 @@
        "</table>"
       ],
       "text/plain": [
-       "[(73, 'Jacob', 'Klein', 'M', 'paid'),\n",
-       " (24, 'Layla', 'Griffin', 'F', 'paid'),\n",
-       " (50, 'Ava', 'Robinson', 'F', 'free'),\n",
-       " (54, 'Kaleb', 'Cook', 'M', 'free'),\n",
+       "[(50, 'Ava', 'Robinson', 'F', 'free'),\n",
+       " (14, 'Theodore', 'Harris', 'M', 'free'),\n",
+       " (10, 'Sylvie', 'Cruz', 'F', 'free'),\n",
+       " (98, 'Jordyn', 'Powell', 'F', 'free'),\n",
        " (32, 'Lily', 'Burns', 'F', 'free')]"
       ]
      },
